# stock-trading-project-backend

./: README.md  pyproject.toml
src/notebooks/: demo_vectorbt.ipynb
