[project]
name = "stock-trading-project-backend"
version = "0.1.0"
description = "Backend for a automated stock trading platform"
authors = [
    {name = "TheMetaSetter",email = "134222962+TheMetaSetter@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "vectorbt (>=0.27.3,<0.28.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "yfinance (>=0.2.59,<0.3.0)",
    "ipywidgets (>=8.1.7,<9.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
